@@ -1,0 +1,63 @@
+<?php
+/* Reminder: always indent with 4 spaces (no tabs). */
+// +---------------------------------------------------------------------------+
+// | Copyright (c) 2006, Demian Turner                                         |
+// | All rights reserved.                                                      |
+// |                                                                           |
+// | Redistribution and use in source and binary forms, with or without        |
+// | modification, are permitted provided that the following conditions        |
+// | are met:                                                                  |
+// |                                                                           |
+// | o Redistributions of source code must retain the above copyright          |
+// |   notice, this list of conditions and the following disclaimer.           |
+// | o Redistributions in binary form must reproduce the above copyright       |
+// |   notice, this list of conditions and the following disclaimer in the     |
+// |   documentation and/or other materials provided with the distribution.    |
+// | o The names of the authors may not be used to endorse or promote          |
+// |   products derived from this software without specific prior written      |
+// |   permission.                                                             |
+// |                                                                           |
+// | THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS       |
+// | "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT         |
+// | LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR     |
+// | A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT      |
+// | OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,     |
+// | SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT          |
+// | LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,     |
+// | DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY     |
+// | THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT       |
+// | (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE     |
+// | OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.      |
+// |                                                                           |
+// +---------------------------------------------------------------------------+
+// | Seagull 0.6                                                              |
+// +---------------------------------------------------------------------------+
+// | Output.php                                                                |
+// +---------------------------------------------------------------------------+
+// | Author: Rares Benea <rbenea@bluestardesign.ro>                             |
+// +---------------------------------------------------------------------------+
+// $Id: Output.php,v 1.0 2006/07/01 00:26:16 demian Exp $
+
+class GuestbookOutput 
+{
+
+    /**
+     * Replaces the @ with &#64; , . with &#46; and adds some 'noise'
+     * Ex: user@domain.com => <span>user</span>&#64;<!-- -->domain&#46;com
+     *
+     * @access  public
+     * @param   string  $email 
+     * @return  string  $email ofucated
+     */
+    function emailObfuscator($email)
+    {
+        SGL::logMessage(null, PEAR_LOG_DEBUG);       
+        
+        $email = str_replace('.','&#46;',$email); // Replace . with &#46;
+        $aEmail = split('@',$email);
+        $data = '<span>'.$aEmail[0].'</span>&#64;<!-- -->'.$aEmail[1];
+       
+        return $data;     
+    }
+}
+?>
