@@ -1,1 +1,8 @@
 [GuestbookMgr]
+requiresAuth    = false
+useCaptcha      = true
+sendNotificationEmail = false
+
+[AdminGuestbookMgr]
+requiresAuth    = true
+adminGuiAllowed = true
