@@ -4,11 +4,25 @@
         'Guestbook Manager :: Add' => 'Guestbook Manager :: Add',
         'No Guestbook entries found' => 'No Guestbook entries found',
         'add new entry' => 'add new entry',
+        'Name' => 'Name',
+        'E-Mail' => 'E-Mail',
         'Message' => 'Message',
+        'Add' => 'Add',
+        'List' => 'List',
+        'Cancel'   => 'Cancel',
+        'Date' => 'Date',
         'Please, specify your name' => 'Please, specify your name',
         'Please, specify your email' => 'Please, specify your email',
         'Please, fill in the message text' => 'Please, fill in the message text',
         'Welcome to our Guestbook' => 'Welcome to our Guestbook',
-        'new guestbook entry saved successfully' => 'new guestbook entry saved successfully'
+        'new guestbook entry saved successfully' => 'new guestbook entry saved successfully',
+        'New Entry' => 'New Entry',
+        'Guestbook List' => 'Guestbook List',
+        'Guestbook Details' => 'Guestbook Details',
+        'Entry deleted successfully' => 'Entry deleted successfully',
+        'Enter Captcha' => 'Please enter the number shown below in the relevant field',
+        'You must enter the number in this field' => 'You must enter the number in this field',
+        'Verify' => 'Verify',
+        'New guestbook entry in' => 'New guestbook entry in',
     );
 ?>
