@@ -1,0 +1,17 @@
+
+#frmGuestComments p label{
+    width: 80px;
+}
+
+#frmGuestComments select {
+    width: 250px;
+}
+
+#frmGuestbookAdd p label{
+    width: 80px;
+}
+
+#frmGuestbookAdd select {
+    width: 250px;
+}
+
